changed the database to allow for differently-timestamped syncs